add change to resolver fixes