@@ -9,6 +9,7 @@ import repositories.TipoPropiedadRepository;
 import utils.TipoPropiedadMapper;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class GetListTipoPropiedadesHandler
@@ -24,7 +25,7 @@ public class GetListTipoPropiedadesHandler
   public List<TipoPropiedadDto> handle(GetListTipoPropiedadesQuery command) {
     try {
       List<TipoPropiedad> tipo = this.tipo.getAll();
-      return tipo.stream().map(TipoPropiedadMapper::from).toList();
+      return tipo.stream().map(TipoPropiedadMapper::from).collect(Collectors.toList());
     } catch (BusinessRuleValidationException e) {
       e.printStackTrace();
       return null;
